--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/ssr": "^21.0.1",
     "bootstrap": "^5.3.8",
     "express": "^5.1.0",
+    "remixicon": "^4.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
